--- a/roles/create_debian_vm_tpl_on_proxmox/meta/main.yml
+++ b/roles/create_debian_vm_tpl_on_proxmox/meta/main.yml
@@ -2,6 +2,6 @@ galaxy_info:
   author: gushmazuko
   description: Create a VM Template with the latest Debian {Version} on Proxmox VE host.
   license: MIT
-  min_ansible_version: 2.1
+  min_ansible_version: "2.1"
   galaxy_tags: []
 dependencies: []
