--- a/roles/deploy_proxmox_on_hetzner/meta/main.yml
+++ b/roles/deploy_proxmox_on_hetzner/meta/main.yml
@@ -2,6 +2,6 @@ galaxy_info:
   author: gushmazuko
   description: Deploy Proxmox on Hetzner
   license: MIT
-  min_ansible_version: 2.1
+  min_ansible_version: "2.1"
   galaxy_tags: []
 dependencies: []
